Integrating model with firebase database

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ assets/retrained_graph.pb
 assets/retrained_labels.txt
 scripts/__pycache__/
 .vscode
+laod-cdea1-firebase-adminsdk-vu2cq-db4367a315.json
